new timer implementation + URL checker